# pdga-rating-calculator

./: .gitignore  LICENSE  README.md  pyproject.toml  rating_calculator.py
.github/workflows/: tests.yml
deprecated/: rating_calculator.py
pdga_rater/: __init__.py  cache.py  calculator.py  cli.py  gui.py  scraper.py
ratings_calculator/: __init__.py  cache.py  calculator.py  cli.py  gui.py  scraper.py
tests/: test_calculator.py  test_history.py  test_scraper.py
